@@ -88,6 +88,8 @@ jlink {
         "javafx"
     )
 
+    mergedModuleName = "jabkit.merged.module"
+
     // We keep debug statements - otherwise "--strip-debug" would be included
     addOptions(
         "--compress",
@@ -287,6 +289,10 @@ jlink {
     }
     jpackage {
         outputDir = "distribution"
+        skipInstaller = true
+
+        imageOptions.addAll(listOf(
+            "--java-options", "--enable-native-access=jabkit.merged.module"))
 
         // See https://docs.oracle.com/en/java/javase/24/docs/specs/man/jpackage.html#platform-dependent-options-for-creating-the-application-package for available options
         if (org.gradle.internal.os.OperatingSystem.current().isWindows) {
@@ -295,7 +301,6 @@ jlink {
                     "--win-console"
                 )
             )
-           skipInstaller = true
         } else if (org.gradle.internal.os.OperatingSystem.current().isLinux) {
             imageOptions.addAll(
                 listOf(
@@ -303,9 +308,6 @@ jlink {
                     "--app-version", "$version"
                 )
             )
-            skipInstaller = true
-        } else if (org.gradle.internal.os.OperatingSystem.current().isMacOsX) {
-            skipInstaller = true
         }
     }
 }
