@@ -3,31 +3,16 @@ import org.gradle.api.tasks.testing.logging.TestExceptionFormat
 plugins {
     id("buildlogic.java-common-conventions")
 
-    application
-}
-
-application{
-    mainClass.set("org.jabref.http.server.Server")
-    mainModule.set("org.jabref.jabsrv")
-
-    applicationDefaultJvmArgs = listOf(
-        "--enable-native-access=com.sun.jna"
-    )
+    `java-library`
 }
 
 val javafxVersion = "24.0.1"
 val javafxPlatform: String by project.extra
 
 dependencies {
-    implementation(project(":jablib"))
+    api(project(":jablib"))
 
     implementation("org.slf4j:slf4j-api:2.0.17")
-    implementation("org.tinylog:slf4j-tinylog:2.7.0")
-    implementation("org.tinylog:tinylog-impl:2.7.0")
-    // route all requests to java.util.logging to SLF4J (which in turn routes to tinylog)
-    implementation("org.slf4j:jul-to-slf4j:2.0.17")
-    // route all requests to log4j to SLF4J
-    implementation("org.apache.logging.log4j:log4j-to-slf4j:2.24.3")
 
     // API
     implementation("jakarta.ws.rs:jakarta.ws.rs-api:4.0.0")
@@ -39,6 +24,7 @@ dependencies {
     implementation("org.glassfish.jersey.inject:jersey-hk2:3.1.10")
     implementation("org.glassfish.hk2:hk2-api:3.1.1")
     implementation("org.glassfish.hk2:hk2-utils:3.1.1")
+    implementation("org.glassfish.hk2:hk2-locator:3.1.1")
 
     // testImplementation("org.glassfish.hk2:hk2-testing:3.0.4")
     // implementation("org.glassfish.hk2:hk2-testing-jersey:3.0.4")
@@ -54,9 +40,6 @@ dependencies {
     implementation("org.hibernate.validator:hibernate-validator:8.0.2.Final")
 
     implementation("com.konghq:unirest-modules-gson:4.4.7")
-
-    implementation("org.glassfish.jersey.inject:jersey-hk2:3.1.10")
-    implementation("org.glassfish.hk2:hk2-api:3.1.1")
 
     // Allow objects "magically" to be mapped to JSON using GSON
     // implementation("org.glassfish.jersey.media:jersey-media-json-gson:3.1.1")
@@ -80,6 +63,14 @@ dependencies {
         exclude(group = "net.bytebuddy", module = "byte-buddy")
     }
     testImplementation("net.bytebuddy:byte-buddy:1.17.5")
+
+    testImplementation("org.tinylog:slf4j-tinylog:2.7.0")
+    testImplementation("org.tinylog:tinylog-impl:2.7.0")
+    // route all requests to java.util.logging to SLF4J (which in turn routes to tinylog)
+    testImplementation("org.slf4j:jul-to-slf4j:2.0.17")
+    // route all requests to log4j to SLF4J
+    testImplementation("org.apache.logging.log4j:log4j-to-slf4j:2.24.3")
+
 }
 
 tasks.test {
@@ -89,13 +80,4 @@ tasks.test {
         exceptionFormat = TestExceptionFormat.FULL
     }
     maxParallelForks = 1
-}
-
-tasks.named<JavaExec>("run") {
-    doFirst {
-        application.applicationDefaultJvmArgs =
-            listOf(
-                "--enable-native-access=com.sun.jna"
-            )
-    }
 }
